2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-02-18  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-default-application-properties.c: Fix a double free poop
	that I made while fixing leaks. Spotted by jrb.
	
Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 Satyajit Kanungo <satyajit.kanungo@wipro.com> 
	* Changed the App name passed to  gnome_program_init().
	  There was a small type in the name. Fixes bug #104060

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* default-applications.desktop.in: Fix the desktop file so that it
	validates.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-24  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * gnome-default-applications-properties.c : Changed the help file
          link to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* file-types-capplet.c (cb_file_type_dialog_response) : Improve
	  handling of help failures.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* gnome-default-applications-properties.c (dialog_response) : improve
	  handling of help failures.

Sun May 26 11:33:26 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-default-applications-properties.c (main): use APPID
	instead of argv[0]
