@@ -1,3 +1,12 @@
+2003-06-25  Christophe Fergeau <teuf@users.sourceforge.net>
+
+	* capplets/default-applications/gnome-default-applications-properties-structs.c
+	* capplets/default-applications/gnome-default-applications-properties.c
+	* capplets/default-applications/gnome-default-applications-properties.glade
+	Added a tab to choose the preferred mailer, added epiphany to the list
+	known browsers, don't select any checkbox there is no default browser
+	or mailer	
+
 2003-06-24  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.3
